# kiro

./: readme.md
watermelon-game/: .gitignore  pyproject.toml
watermelon-game/backend/: database.py  main.py  models.py
watermelon-game/backend/routes/: game.py  leaderboard.py
watermelon-game/frontend/: index.html
watermelon-game/tests/: test_leaderboard.py
